1999-04-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* WindowGeometryRecord.m ([WindowGeometryRecord -lispIn:]): Move 
	to setting phase.

1999-04-19  Marcus G. Daniels  <mgd@helen.santafe.edu>

	* LinkItem.m ([LinkItem -createItem]): Add extra parens around
	method call arguments to strdup.

	* OvalNodeItem.m ([OvalNodeItem -createItem]): Likewise.

	* RectangleNodeItem.m ([RectangleNodeItem -createItem]): Likewise.

	* common.m (tkobjc_dynamicEval): Likewise.

	* common.m (tkobjc_createText): Likewise.

1999-04-07  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): Put pixmap and mask
	frees inside pixmap->display conditional.  In this context, also
	call XFreeColors using xpmattrs.{colormap,alloc_pixels,nalloc_pixels}. 
	Call XpmFreeAttributes.

	* Pixmap.h (Pixmap): Add xpmattrs.

1999-04-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m (tkobjc_pixmap_update_raster): If pixmap or
	mask are set, free them.  Set pixmap->display to current display
	(for use with free).

	* Pixmap.m ([Pixmap +createBegin:]): Initialize pixmap, mask and
	display to zero in non-_WIN32 case.

1999-03-21  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* internal.m: Hide Rectangle during Win32 header file includes.

1999-03-16  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Revert last change.

1999-03-16  Vladimir Jojic  <vjojic@chama.santafe.edu>

	* Makefile.am (INCLUDES): Add JAVAINCLUDES.

1999-03-14  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am (INCLUDES): Add -I for libobjc.

1999-03-06  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Makefile.am: Use @CFLAGS_NOWARN_IMPLICIT_INT@ instead of
	-Wno-implicit-int.

1999-02-23  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Graph.h (GraphElement): Implement GraphElement instead of
	_GraphElement.

1999-02-20  Marcus G. Daniels  <mgd@pojoaque.santafe.edu>

	* Raster.h ([Raster -setWidth:Height:]): Declare.
